--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ flutter:
     - images/air_soft_6.png
     - images/air_soft_7.png
     - images/air_soft_8.png
+    - images/drawer_bg.png
 
     # json文件
     - jsons/weather_map.json
