自定义加载控件完成

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: any
   connectivity: any
   xml2json: any
+  simple_permissions: any
 
 dev_dependencies:
   flutter_test:
