--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,19 +21,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
-  dio: any
-  shared_preferences: any
-  device_info: any
-  rxdart: any
-  intl: any
-  flutter_staggered_grid_view: any
-  url_launcher: any
-  cached_network_image: any
-  pull_to_refresh: any
-  image_picker: any
-  connectivity: any
-  simple_permissions: any
-  html: any
+  dio: ^1.0.12
+  shared_preferences: ^0.4.3
+  device_info: ^0.3.0
+  intl: ^0.15.7
+  flutter_staggered_grid_view: ^0.2.5
+  url_launcher: ^4.0.3
+  cached_network_image: ^0.5.1
+  connectivity: ^0.3.2
+  simple_permissions: ^0.1.9
+  package_info: ^0.3.2
+  rxdart: ^0.20.0
+  html: ^0.13.3+3
 
 dev_dependencies:
   flutter_test:
