--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   package_info: ^0.3.2
   rxdart: ^0.20.0
   html: ^0.13.3+3
+  webview_flutter: ^0.1.2
 
 dev_dependencies:
   flutter_test:
