--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   rxdart: ^0.20.0
   html: ^0.13.3+3
   webview_flutter: ^0.1.2
+  pull_to_refresh: ^1.1.6
+  share: ^0.5.3
 
 dev_dependencies:
   flutter_test:
