--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <application
         android:name=".app.WeatherApp"
         android:icon="@mipmap/ic_launcher"
-        android:label="flutter_weather">
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="假装看天气(Flutter)">
         <activity
             android:name=".view.activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
