更换主题色

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_advanced_networkimage: ^0.3.13
   photo_view: ^0.1.2
   wave: ^0.0.8
+  flutter_colorpicker: ^0.2.1
 
 dev_dependencies:
   flutter_test:
