--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   intl: ^0.15.7
   flutter_staggered_grid_view: ^0.2.5
   url_launcher: ^4.0.3
-  cached_network_image: ^0.5.1
+  cached_network_image: ^0.6.0-beta+1
   connectivity: ^0.3.2
   simple_permissions: ^0.1.9
   package_info: ^0.3.2
