--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,8 @@ flutter:
     - images/ic_rain_ground.png
     - images/ic_sanstorm_ground.png
     - images/ic_snow_ground.png
+    - images/cloud_car1.png
+    - images/cloud_car2.png
 
     # json文件
     - jsons/weather_map.json
