--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   share: ^0.5.3
   photo_view: ^0.1.2
   flutter_colorpicker: ^0.2.1
+  dragable_flutter_list: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -129,6 +130,7 @@ flutter:
     - images/ic_snow_ground.png
     - images/cloud_car1.png
     - images/cloud_car2.png
+    - images/nothing_here.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
