--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   html: ^0.13.3+3
   web_vuw: ^0.2.2
   pull_to_refresh: ^1.1.6
-  share_extend: ^1.0.8
+  share: ^0.5.3
   photo_view: ^0.1.2
   flutter_colorpicker: ^0.2.1
   dragable_flutter_list: ^1.0.2
