--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,24 +20,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: any
-  dio: ^1.0.12
-  shared_preferences: ^0.4.3
-  device_info: ^0.3.0
-  intl: ^0.15.7
-  url_launcher: ^4.0.3
-  cached_network_image: ^0.8.0
-  connectivity: ^0.3.2
-  simple_permissions: ^0.1.9
-  package_info: ^0.3.2
-  rxdart: ^0.20.0
-  html: ^0.13.3+3
-  web_vuw: ^0.2.2
-  share: ^0.5.3
-  flutter_colorpicker: ^0.2.1
-  dragable_flutter_list: ^1.0.2
-  flutter_linkify: ^2.1.0
-  image_gallery_saver: ^1.1.0
+  cupertino_icons: "<=0.1.2"
+  dio: "<=1.0.12"
+  shared_preferences: "<=0.4.3"
+  device_info: "<=0.3.0"
+  intl: "<=0.15.8"
+  url_launcher: "<=4.0.3"
+  cached_network_image: "<=0.8.0"
+  connectivity: "<=0.3.2"
+  simple_permissions: "<=0.1.9"
+  package_info: "<=0.3.2"
+  rxdart: "<=0.20.0"
+  html: "<=0.13.3+3"
+  web_vuw: "<=0.2.2"
+  share: "<=0.5.3"
+  flutter_colorpicker: "<=0.2.1"
+  dragable_flutter_list: "<=1.0.2"
+  flutter_linkify: "<=2.1.0"
+  image_gallery_saver: "<=1.1.0"
 
 dev_dependencies:
   flutter_test:
