锤子天气分享弹窗

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,9 @@ flutter:
     - images/cloud_car1.png
     - images/cloud_car2.png
     - images/nothing_here.gif
+    - images/hammer_share1.jpg
+    - images/hammer_share2.jpg
+    - images/hammer_share3.jpg
 
     # json
     - jsons/province.json
