--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: Flutter版假装看天气
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.1.3+8
+version: 1.2.0+9
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -38,6 +38,7 @@ dependencies:
   dragable_flutter_list: "<=1.0.2"
   flutter_linkify: "<=2.1.0"
   image_gallery_saver: "<=1.1.0"
+  esys_flutter_share: ">=0.0.8<0.0.9"
 
 dev_dependencies:
   flutter_test:
