--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,10 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "x86", "armeabi-v7a", "arm64-v8a"
+//            abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
