--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,8 +44,8 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-//            abiFilters "x86", "armeabi-v7a", "arm64-v8a"
-            abiFilters "armeabi-v7a"
+            abiFilters "x86", "armeabi-v7a", "arm64-v8a"
+//            abiFilters "armeabi-v7a"
         }
     }
 
