--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_gallery_saver: 1.2.0
   esys_flutter_share: 1.0.2
   csv: 4.0.3
+  flutter_staggered_grid_view: 0.3.0
 
 dev_dependencies:
   flutter_test:
