--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,12 @@ dependencies:
     sdk: flutter
   dio: 3.0.4
   intl: 0.16.0
-  rxdart:  0.22.0
-  html: 0.14.0+2
+  rxdart:  0.22.5
+  html: 0.14.0+3
   flutter_colorpicker: 0.2.6
   dragable_flutter_list: 1.0.2
   flutter_linkify: 2.1.0
+  transparent_image: 1.0.0
   csv: 4.0.3
   flutter_staggered_grid_view: 0.3.0
 
