--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   esys_flutter_share: 1.0.2
   csv: 4.0.3
   flutter_staggered_grid_view: 0.3.0
+  retry: 3.0.0+1
 
 dev_dependencies:
   flutter_test:
