--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   device_info: 0.4.0+2
   intl: 0.16.1
   url_launcher: 5.0.5
-  cached_network_image: 2.0.0
+  cached_network_image: 2.2.0+1
   connectivity: 0.4.3+4
   permission_handler: 3.1.0
   package_info: 0.4.0+4
