--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_staggered_grid_view: 0.3.0
   retry: 3.0.0+1
   shared_preferences: 0.5.7+2
+  url_launcher: 5.4.7
 
 dev_dependencies:
   flutter_test:
