--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   dio: 3.0.9
   shared_preferences: 0.5.3+1
   device_info: 0.4.0+2
-  intl: 0.16.1
+  intl: 0.17.0
   url_launcher: 5.0.5
   cached_network_image: 2.2.0+1
   connectivity: 0.4.3+4
@@ -31,6 +31,7 @@ dependencies:
   csv: 4.0.3
   flutter_staggered_grid_view: 0.3.0
   retry: 3.0.0+1
+  wallpaper_manager: 1.0.10
 
 dev_dependencies:
   flutter_test:
